--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>Contact</title>
 </head>
 <body>
-  <h1>Contact Us</h1>
-  <p>PLACEHOLDER</p>
+	<h1>Contact</h1>
+	<p>This is the Contact Us page content.</p>
+	<script src="script.js"></script>
 </body>
 </html>
