--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
 	<title>Rentahouse Crete</title>
 </head>
 <body>
-
+	<header>
+    <h1>Rentahouse Crete</h1>
+    <nav>
+        <ul>
+            <li><a class="font-medium" a href="#about us.html">About Us</a></li>
+            <li><a class="font-medium" a href="#about us.html">About Us</a></li>
+            <li><a class="font-medium" a href="#about us.html">About Us</a></li>
+            <li><a class="font-medium" a href="#about us.html">About Us</a></li>
+			<li><a class="font-medium" a href="#about us.html">About Us</a></li>
+			<li><a href="#" id="toggleButton"><img src="sidebar.jpg" alt="Sidebar"></a></li>
+            </li>
+		</ul>
+    </nav>
+	</header>
+	<div id="sidebar">
+		<h2>Additional Information</h2>
+		<ul>
+			<li><a href="#">Town of Chania</a></li>
+			<li><a href="#">Flights to Crete</a></li>
+			<li><a href="#">Places to Visit</a></li>
+			<li><a href="#">Best Food on Crete</a></li>
+		</ul>
+	</div>
 	<script src="script.js"></script>
 </body>
 </html>
