Font changes and text flavour

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<title>Rentahouse Crete</title>
+	<title>Rentahouse Chania - Accomodation and Lodging for Reservation in Greece, Crete</title>
 </head>
 <body>
 	<header>
@@ -12,10 +12,10 @@
     <nav>
         <ul>
             <li><a class="font-medium" a href="#about us.html">About Us</a></li>
-            <li><a class="font-medium" a href="#about us.html">About Us</a></li>
-            <li><a class="font-medium" a href="#about us.html">About Us</a></li>
-            <li><a class="font-medium" a href="#about us.html">About Us</a></li>
-			<li><a class="font-medium" a href="#about us.html">About Us</a></li>
+            <li><a class="font-medium" a href="#drone footage.html">Drone Footage</a></li>
+            <li><a class="font-medium" a href="#gallery.html">Gallery</a></li>
+            <li><a class="font-medium" a href="#pricing.html">Pricing&Commodities</a></li>
+			<li><a class="font-medium" a href="#contact.html">Contact</a></li>
 			<li><a href="#" id="toggleButton"><img src="sidebar.jpg" alt="Sidebar"></a></li>
             </li>
 		</ul>
