Font changes and first link in

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div id="sidebar">
 		<h2>Additional Information</h2>
 		<ul>
-			<li><a href="#">Town of Chania</a></li>
+			<li><a href="https://www.google.com/search?client=opera&q=chania&sourceid=opera&ie=UTF-8&oe=UTF-8">Town of Chania</a></li>
 			<li><a href="#">Flights to Crete</a></li>
 			<li><a href="#">Places to Visit</a></li>
 			<li><a href="#">Best Food on Crete</a></li>
