--- a/drone footage.html
+++ b/drone footage.html
@@ -7,8 +7,30 @@
 	<title>Drone Footage</title>
 </head>
 <body>
-	<h1>Drone Footage</h1>
-	<p>PLACEHOLDER</p>
+	<header>
+		<h1>Drone Footage</h1>
+		<p>A beutiful video of Chania by drone</p>
+	</header>
+<main>
+	<section>
+		<article>
+			<h2>Placeholder<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+		<article>
+			 <div class="media flex">
+				<div class="video">
+					<video controls class="mp4">
+						<source
+						src="drone.mp4" <!-- Placeholder bez pliku ponieważ nie posiadam filmu który mógłbym tu legalnie umieścić -->
+						alt="Drone recording of Chania - placeholder"
+						/>
+					</video>
+				</div>
+			</div>
+		</article>
+	</section>
+</main>
 	<script src="script.js"></script>
 </body>
 </html>
