--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta name="keywords" content="Nocleg, Grecja, Morze, Mieszkanie, Wakacje, Rezerwacja, Greece, Crete, Booking, Accomodation, Sea, Lodging">
+    <meta name="description" content="Wynajem domu na Krecie">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 	<title>Rentahouse Chania - Accomodation and Lodging for Reservation in Greece, Crete</title>
@@ -24,9 +26,33 @@
 <main>
 	<section>
 		<article>
-			<h2>Placeholder<h2/>
-			<p></p>
+			<h2>Villa Barbara<h2/>
+			<p>Potato Potahto Description Tomato</p>
 		</article>
+		<div class="container">
+			<article class="side-by-side">
+			<h2>Crete</h2>
+			<p>placeholder text</p>
+			</article>
+			<article class="side-by-side">
+			<h2>Chania</h2>
+			<p>placeholder text</p>
+			</article>
+		</div>
+		<article>
+			<h2>Almirida<h2/>
+			<p>Potato Potahto Description Tomato</p>
+		</article>
+		<div class="container">
+			<article class="side-by-side">
+			<h2>Greek Cuisine</h2>
+			<p>placeholder text</p>
+			</article>
+			<article class="side-by-side">
+			<h2>Route from Airport in Iraklio</h2>
+			<p>placeholder text</p>
+			</article>
+		</div>
 	</section>
 </main>
 	<div id="sidebar">
