--- a/pricing.html
+++ b/pricing.html
@@ -7,8 +7,30 @@
 	<title>Pricing</title>
 </head>
 <body>
-	<h1>Pricing</h1>
-	<p>PLACEHOLDER</p>
+	<header>
+		<h1>Pricing</h1>
+		<p>Information about prices and commodities available on and off-site</p>
+	</header>
+<main>
+	<section>
+		<article>
+			<h2>Full-time Cook<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+		<article>
+			<h2>Rental Car<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+		<article>
+			<h2>Variety of naval craft<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+		<article>
+			<h2>Additional Cleaning<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+	</section>
+</main>
 	<script src="script.js"></script>
 </body>
 </html>
