--- a/about us.html
+++ b/about us.html
@@ -7,8 +7,21 @@
 	<title>About Us</title>
 </head>
 <body>
-	<h1>About Us</h1>
-	<p>This is the About Us page content.</p>
+	<header>
+		<h1>About Us</h1>
+		<p>Information about the Owners and the House</p>
+	</header>
+<main>
+	<section>
+		<article>
+			<h2>Placeholder<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+		<article>
+			<img src="house.jpg" alt="Photo of the house">
+		</article>
+	</section>
+</main>
 	<script src="script.js"></script>
 </body>
 </html>
