--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,21 @@
 	<title>Contact</title>
 </head>
 <body>
-	<h1>Contact</h1>
-	<p>This is the Contact Us page content.</p>
+	<header>
+		<h1>Contact</h1>
+		<p>How to book your place at the Villa</p>
+	</header>
+<main>
+	<section>
+		<article>
+			<h2>Placeholder<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+		<article>
+			<img src="room.jpg" alt="photo of one of the rooms">
+		</article>
+	</section>
+</main>
 	<script src="script.js"></script>
 </body>
 </html>
