--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,39 @@
 	<title>Gallery</title>
 </head>
 <body>
-	<h1>Gallery</h1>
-	<p>PLACEHOLDER</p>
-    <script src="script.js"></script>
+	<header>
+		<h1>About Us</h1>
+		<p>Information about the Owners and the House</p>
+	</header>
+<main>
+	<section>
+		<article>
+			<h2>Placeholder<h2/>
+			<p>stuff stuff stuff stuff</p>
+		</article>
+		<article>
+			<img src="house.jpg" alt="Widok domu" width="300" height="200">
+		</article>
+		<article>
+			<img src="room.jpg" alt="Jeden z pokojów" width="300" height="200">
+		</article>
+		<article>
+			<img src="room2.jpg" alt="Jeden z pokojów" width="300" height="200">
+		</article>
+		<article>
+			<img src="room3.jpg" alt="Jeden z pokojów" width="300" height="200">
+		</article>
+		<article>
+			<img src="room4.jpg" alt="Jeden z pokojów" width="300" height="200">
+		</article>
+		<article>
+			<img src="chaniabeach.jpg" alt="Plaża w Chani" width="300" height="200">
+		</article>
+		<article>
+			<img src="almiridabeach.jpg" alt="Plaża w Almiridzie" width="300" height="200">
+		</article>
+	</section>
+</main>
+	<script src="script.js"></script>
 </body>
 </html>
