Added youtube code sample for potential use

--- a/drone footage.html
+++ b/drone footage.html
@@ -22,9 +22,11 @@
 				<div class="video">
 					<video controls class="mp4">
 						<source
-						src="drone.mp4" <!-- Placeholder bez pliku ponieważ nie posiadam filmu który mógłbym tu legalnie umieścić -->
+						src="drone.mp4" 
 						alt="Drone recording of Chania - placeholder"
 						/>
+						<!-- Placeholder bez pliku ponieważ nie posiadam filmu który mógłbym tu legalnie umieścić -->
+						<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/IId8DtKrtT0" frameborder="0" allowfullscreen></iframe> -->
 					</video>
 				</div>
 			</div>
